# Plants_Recognizer_DL

./: .gitignore  README.md  dvc.yaml  params.yaml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  template.py
configs/: config.yaml
prediction_service/: app.py  download.py
research/: st_01.ipynb  st_02.ipynb  st_03.ipynb  st_04.ipynb  st_05.ipynb  test.ipynb
src/deepClassifier/: __init__.py
src/deepClassifier/components/: __init__.py  data_ingestion.py
src/deepClassifier/config/: configuration.py
src/deepClassifier/entity/: __init__.py  config_entity.py
src/deepClassifier/pipeline/: stage_01_data_ingestion.py  stage_04_evaluation.py
src/deepClassifier/utils/: common.py
tests/unit/: test_utils.py
