[metadata]
license = MIT
license_file = LICENSE
classifier =
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent

[options]
install_requires =
    ensure==1.0.2
python_requires = >=3.7    

# pytest>=7.1.3  helps to run unit test and integration test
# mypy>=0.971  checks for typing error
# flake8>=5.0.4  unnecessary spaces, etc,. will be highlighted (linting tool)
# tox>=3.25.1  helps in creating different environments and to test that application locally
# black>=22.8.0 checks whether programming is done in structured manner or not
[options.extras_require]
testing =
    pytest>=7.1.3
    mypy>=0.971
    flake8>=5.0.4
    tox>=3.25.1
    black>=22.8.0

# py.typed will help to not check the errors in imported libraries
[options.package_data]
deepClassifier = py.typed
  
[flake8]
max-line-length = 160
exclude = __init__.py
